--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,7 +48,7 @@
         </div>
                     <footer class="post-footer entry-meta">
                         {% if site.share %}{% include share.html %}{% endif %}
-                        {% include signoff.html %} 
+                        <!-- {% include signoff.html %}  -->
                         {% if site.disqus_shortname and page.comments == true %}<div id="disqus_thread"></div><!-- /#disqus_thread -->{% endif %}
                     </footer>
             </article>
