change mathjax cdn to https

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -103,9 +103,11 @@ strip_slash }}{% endif %}{% endcapture %}
 <!--Load Mathjax-->
 <script
   type="text/javascript"
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
+  async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"
 ></script>
-<script>
+
+<script type="text/x-mathjax-config">
   MathJax.Hub.Config({
     config: ['MMLorHTML.js'],
     extensions: ['tex2jax.js', 'TeX/AMSmath.js', 'TeX/AMSsymbols.js'],
